# mayquill

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh  gen.sh  main.cpp  mkbuild.sh  parser.cppm  run.sh  server.cpp  server.cppm  shell.nix  util.cppm  wire.cppm
generator/: CMakeLists.txt  main.cpp  parser.cppm
src/: client.cppm  client_forward.cppm  client_impl.cpp  definitions.cppm  logger.cppm  main.cpp  mayquill.cppm  serialiser.cppm  server.cppm  shared.cppm  util.cppm  wire.cppm
src/mayquill/: logger.h
